[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["ozongzi <ozongzi@icloud.com>"]

[dependencies]
actix-web = "4"
chrono = "0.4.43"
config = "0.15.19"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
uuid = {version = "1", features = ["v4"]}

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.13"
