[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["ozongzi <ozongzi@icloud.com>"]

[dependencies]
actix-web = "4"
chrono = "0.4"
config = "0.15"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.13"
