[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["ozongzi <ozongzi@icloud.com>"]

[dependencies]
actix-web = "4"
chrono = "0.4"
config = "0.15"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
uuid = { version = "1", features = ["v4"] }
secrecy = { version = "0.10", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = "0.20"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.13"
once_cell = "1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
